--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
               <li><a href="E9/index.html">Exercise 9: Layouts</a></li>
               <li><a href="E10/index.html">Exercise 10: Visualizing Responsiveness</a></li>
               <li><a href="E11/index.html">Exercise 11: Type on Screen II</a></li>
+              <li><a href="E12/index.html">Exercise 12: CSS Drawing</a></li>
+              <li><a href="E13/index.html">Exercise 13: Programmer and Computer</a></li>
               <li><a href="E9/test/index.html">Class Exercise</a></li>
             </ul>
         </div>
