--- a/website/about/index.html
+++ b/website/about/index.html
@@ -5,23 +5,28 @@
       <title>About</title>
       <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
       <link rel="stylesheet" href="../css/main.css">
-      </head>
-  <body>
-    <header>
+  </head>
+  <main class="Home">
+    <div class="HomeImage">
+      <div class="pageheader">
+        <h1><a href="../index.html">Porto, Portugal</a></h1>
+      </div>
       <nav>
         <ul>
-          <li><a href="../index.html">Porto, Portugal</a></li>
           <li><a href="../about/index.html">About</a></li>
+          <li>|</li>
           <li><a href="../sights/index.html">Sights</a></li>
+          <li>|</li>
           <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
         </ul>
       <nav>
-    </header>
-      <main class="about">
-        <div class="boat">
-            <img src="../images/boatView.jpg" alt="Boat View">
-        </div>
-      </main>
+    </div>
+  </main>
+  <body>
+      <div class="boat">
+          <img src="../images/boatView.jpg" alt="Boat View">
+      </div>
+      <div class="text">
       <h3>When to Visit:</h3>
         <p>The best time to visit Porto is from May to September when the weather is often sunny and warm. Overall, Porto experiences a moderate climate. Summertime temps are high but bearable, and the breezes and nearby beaches will help you stay cool.</p>
       <h3>At the airport:</h3>
@@ -34,11 +39,11 @@
             roughly €25. Reservations must be made in advance, either online or at the station.</p>
       <h3>Porto orientation:</h3>
           <p>The whole of Porto’s compact historic centre has been awarded UNESCO World Heritage status, so walking is certainly the best way to discover the city.</p>
-      <footer>
-        <main class="footer">
-          <div class="logo"></div>
-        </main>
-        <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
-      </footer>
+      </div>
+  </body>
+    <footer>
+        <div class="logo"></div>
+        <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
+    </footer>
   </body>
 </html>
