--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,8 @@
   </head>
   <main class="Home">
     <div class="HomeImage">
-      <div class="pageheader"<a href="index.html">Porto, Portugal</a>
+      <div class="pageheader">
+        <h1><a href="index.html">Porto, Portugal</a></h1>
       </div>
       <nav>
         <ul>
@@ -23,14 +24,13 @@
     </div>
   </header>
   <body>
-    <div class="hometext">
+    <div class="text">
       Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.
     </div>
   </main>
     <footer>
       <div class="logo"></div>
       <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
-      <p></p>
     </footer>
   </body>
 </html>
