--- a/E13/index.html
+++ b/E13/index.html
@@ -25,6 +25,9 @@
         <li>Place the other rectangle at coordinates: X=552 and Y=681.</li>
         <li>Next create two rectangles at 108w x 15h. Fill in black and remove borders.</li>
         <li>Align each rectangle above each circle. One rectangle at position: X=342 by Y=525, the other rectangle at: X=550 by Y=525.</li>
+        <li>Export artboard as a png. Save file name as e13.</li>
+        <li>Email image to achuah@masonlive.gmu.edu.</li>
+
       </ol>
     </body>
   </html>
