--- a/E12/index.html
+++ b/E12/index.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
     </head>
     <body>
+      <main class="switch">
+        <div class="leftcontroller"></div>
+          <div class="leftjoystick"></div>
+          <div class="minusbutton"></div>
+        </div>
+        <div class="mainbody">
+          <div class="leftcontrol"></div>
+          <div class="screen"></div>
+          <div class="rightcontrol"></div>
+        </div>
 
+        </div>
+      </main>
     </body>
   </html>
