--- a/E12/index.html
+++ b/E12/index.html
@@ -10,15 +10,29 @@
       <main class="switch">
         <div class="leftcontroller"></div>
           <div class="leftjoystick"></div>
-          <div class="minusbutton"></div>
         </div>
         <div class="mainbody">
           <div class="leftcontrol"></div>
-          <div class="screen"></div>
+          <div class="screenbezel"></div>
           <div class="rightcontrol"></div>
         </div>
-
+        <div class="leftbuttons">
+          <div class="minusbutton"></div>
+          <div class="cbutton"></div>
+          <div class="cbuttonUP"></div>
+          <div class="cbutton1"></div>
+          <div class="cbuttonDOWN"></div>
+          <div class="cbutton2"></div>
+          <div class="cbuttonLEFT"></div>
+          <div class="cbutton3"></div>
+          <div class="cbuttonRIGHT"></div>
+          <div class="screenshot"></div>
+          <div class="screenshotcircle"></div>
         </div>
+        <div class="screen"></div>
+          <div class="mainscreen"></div>
+        <div class="rightbuttons"></div>
+          <div class="plusbutton"></div>
       </main>
     </body>
   </html>
