--- a/E12/index.html
+++ b/E12/index.html
@@ -2,37 +2,65 @@
   <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>E12</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
     </head>
     <body>
       <main class="switch">
-        <div class="leftcontroller"></div>
-          <div class="leftjoystick"></div>
+        <div class="leftcontrol">
+            <div class="minusbutton"></div>
+            <div class="leftjoystick"></div>
+            <div class="leftbuttons">
+              <div class="cbutton">
+                <div class="cbuttonUP"></div>
+              </div>
+              <div class="cbutton1">
+                <div class="cbuttonDOWN"></div>
+              </div>
+              <div class="cbutton2">
+                <div class="cbuttonLEFT"></div>
+              </div>
+              <div class="cbutton3">
+                <div class="cbuttonRIGHT"></div>
+              </div>
+            </div>
+            <div class="screenshot">
+              <div class="screenshotcircle"></div>
+            </div>
         </div>
-        <div class="mainbody">
-          <div class="leftcontrol"></div>
-          <div class="screenbezel"></div>
-          <div class="rightcontrol"></div>
-        </div>
-        <div class="leftbuttons">
-          <div class="minusbutton"></div>
-          <div class="cbutton"></div>
-          <div class="cbuttonUP"></div>
-          <div class="cbutton1"></div>
-          <div class="cbuttonDOWN"></div>
-          <div class="cbutton2"></div>
-          <div class="cbuttonLEFT"></div>
-          <div class="cbutton3"></div>
-          <div class="cbuttonRIGHT"></div>
-          <div class="screenshot"></div>
-          <div class="screenshotcircle"></div>
-        </div>
-        <div class="screen"></div>
+        <div class="screenbezel">
           <div class="mainscreen"></div>
-        <div class="rightbuttons"></div>
+          <div class="speakerleft"></div>
+          <div class="speakerright"></div>
+          <div class="triforce">
+            <div class="tri"></div>
+            <div class="tri1"></div>
+            <div class="tri2"></div>
+          </div>
+        </div>
+        <div class="rightcontrol">
           <div class="plusbutton"></div>
+          <div class="plusbutton1"></div>
+          <div class="rightbuttons"></div>
+            <div class="xbutton">
+              <div class="x">X</div>
+            </div>
+            <div class="ybutton">
+              <div class="y">Y</div>
+            </div>
+            <div class="abutton">
+              <div class="a">A</div>
+            </div>
+            <div class="bbutton">
+              <div class="b">B</div>
+            </div>
+          <div class="rightjoystick"></div>
+          <div class="homebutton"
+            <div class="home"></div>
+          </div>
+        </div>
       </main>
     </body>
   </html>
