--- a/E13/index.html
+++ b/E13/index.html
@@ -8,6 +8,7 @@
     </head>
     <header><h1><a href="../index.html">Exercise 13: Programmer and Computer</a></h1></header>
     <body>
+      <h2>Instructions:</h2>
       <ol>
         <li>Open XD.</li>
         <li>Create an artboard that is 1000 x 1000 px.</li>
@@ -27,7 +28,12 @@
         <li>Align each rectangle above each circle. One rectangle at position: X=342 by Y=525, the other rectangle at: X=550 by Y=525.</li>
         <li>Export artboard as a png. Save file name as e13.</li>
         <li>Email image to achuah@masonlive.gmu.edu.</li>
-
       </ol>
+      <h2>Original:</h2>
+      <img src="images/original.png" alt="Original"/>
+      <h2>Drawing 1</h2>
+      <img src="images/E13REC.png" alt="Drawing1"/>
+      <h2>Drawing 2</h2>
+      <img src="images/E13MATT.png" alt="Drawing2"/>
     </body>
   </html>
