--- a/website/index.html
+++ b/website/index.html
@@ -7,27 +7,28 @@
     <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <main class="Home">
-    <div class="HomeImage">
-      <div class="pageheader">
-        <h1><a href="index.html">Porto, Portugal</a></h1>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="about/index.html">About</a></li>
-          <li>|</li>
-          <li><a href="sights/index.html">Sights</a></li>
-          <li>|</li>
-          <li><a href="24hours/index.html">24 Hours in Porto</a></li>
-        </ul>
-      <nav>
-    </div>
-  </header>
   <body>
-    <div class="text">
+  <header>
+    <main class="Home">
+      <div class="HomeImage">
+        <div class="pageheader">
+          <h1><a href="index.html">Porto, Portugal</a></h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="about/index.html">About</a></li>
+            <li>|</li>
+            <li><a href="sights/index.html">Sights</a></li>
+            <li>|</li>
+            <li><a href="24hours/index.html">24 Hours in Porto</a></li>
+          </ul>
+        <nav>
+      </div>
+    </header>
+    <div id="hometext">
       Portugal’s second city is a laid-back destination full of pretty shops, historic alleyways, and stories from its time as an iconic European trade city. Visit for its magnificent architecture, its burgeoning modern gastronomy, and the delights of a relaxed city with a strong cultural identity.
     </div>
-  </main>
+    </main>
     <footer>
       <div class="logo"></div>
       <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
