--- a/website/sights/index.html
+++ b/website/sights/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir ="ltr">
+<html>
   <head>
       <meta charset="utf-8">
       <title>Sights</title>
@@ -8,87 +8,93 @@
       </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Porto, Portugal</a></li>
-          <li><a href="../about/index.html">About</a></li>
-          <li><a href="../sights/index.html">Sights</a></li>
-          <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
-        </ul>
-      <nav>
+        <div class="HomeImage">
+          <div class="pageheader">
+            <h1><a href="../index.html">Porto, Portugal</a></h1>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="../about/index.html">About</a></li>
+              <li>|</li>
+              <li><a href="../sights/index.html">Sights</a></li>
+              <li>|</li>
+              <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
+            </ul>
+          <nav>
+        </div>
     </header>
-      <h1>Top 15 Things to Do in Porto</h1>
-        <main class="bridge">
-          <div class="bridgelocks">
-            <img src="../images/luisIBridgeLocks.jpg" alt="Bridge Locks">
-          </div>
-        </main>
+    <main class="sights">
+    <h1>Top 15 Things to Do in Porto</h1>
+    <section class="bridge">
+      <div class="bridgelocks">
+        <img src="../images/luisIBridgeLocks.jpg" alt="Bridge Locks"/>
+      </div>
       <h3>1. Luís I Bridge</h3>
-        <p>The Dom Luís I Bridge, or Luís I Bridge, is a double-deck metal arch bridge that spans the River Douro between the cities of Porto and Vila Nova de Gaia in Portugal. At its construction, its 172 metres span was the longest of its type in the world. It has been confused with the nearby Maria Pia Bridge, a railway bridge that was built 9 years earlier, which is similar in aspect to the Luís I bridge.</p>
-        <main class="library">
-          <div class="stairs">
-              <img src="../images/libraryFront.jpg" alt="Library Stairs"/>
-          </div>
-          <div class="book">
-              <img src="../images/libraryBook.jpg" alt="Library Book"/>
-          </div>
-        </main>
+      <p>The Dom Luís I Bridge, or Luís I Bridge, is a double-deck metal arch bridge that spans the River Douro between the cities of Porto and Vila Nova de Gaia in Portugal. At its construction, its 172 metres span was the longest of its type in the world. It has been confused with the nearby Maria Pia Bridge, a railway bridge that was built 9 years earlier, which is similar in aspect to the Luís I bridge.</p>
+    </section>
+    <section class="library">
+      <div class="stairs">
+        <img src="../images/libraryFront.jpg" alt="Library Stairs"></div>
+      <div class="book">
+        <img src="../images/libraryBook.jpg" alt="Library Book"/>
+      </div>
       <h3>2. Livraria Lello</h3>
         <p>The Lello Bookstore, also known as Livraria Lello & Irmão and Livraria Chardron, is a bookstore located in civil parish of Cedofeita, Santo Ildefonso, Sé, Miragaia, São Nicolau e Vitória, in the northern Portuguese municipality of Porto. Along with Bertrand in Lisbon, it is one of the oldest bookstores in Portugal and frequently rated among the top bookstores in the world. Rumors say it was a direct inspiration for J.K. Rowling and her Harry Potter books. Rowling lived in the city from 1991 to 1993 and was a frequent customer.</p3>
       <h3>3. Clérigos Church</h3>
         <p>The Clérigos Church is a Baroque church in the city of Porto, in Portugal. Its tall bell tower, the Torre dos Clérigos, can be seen from various points of the city and is one of its most characteristic symbols.</p>
-      <main class="railway">
+      </section>
+      <section class="railway">
         <div class="railstation">
           <img src="../images/outsideSaoBentoRainwayStation.jpg" alt="Railway Station"/>
         </div>
-      </main>
-      <h3>4. São Bento Railway Station</h3>
+        <h3>4. São Bento Railway Station</h3>
         <p>São Bento Railway Station is a 20th-century railway terminal in the civil parish of Cedofeita, Santo Ildefonso, Sé, Miragaia, São Nicolau e Vitória, in the municipality of Porto, district of Porto. The English translation of São Bento is Saint Benedict. The station is located in the Historic Centre of Porto, which has been declared a UNESCO World Heritage Site and as a National Monument of Portugal. This building was constructed over a number of years, starting in 1904, based on plans by architect José Marques da Silva. The large panels of azulejo tile were designed and painted by Jorge Colaço; they were completed in 1916 and the station was then inaugurated. The murals represent moments in the country's history and the multicoloured panels depict rural scenes showing the people of various regions.</p>
-        <main class="palace">
-          <div class="bolsa">
-            <img src="../images/bolsaPalace.jpg" alt="Bolsa Palace"/>
-          </div>
-      <h3>5. Bolsa Palace</h3>
+      </section>
+      <section class="palace">
+        <div class="bolsa">
+          <img src="../images/bolsaPalace.jpg" alt="Bolsa Palace"/>
+        </div>
+        <h3>5. Bolsa Palace</h3>
         <p>The Stock Exchange Palace is a historical building in Porto, Portugal. The palace was built in the 19th century by the city's Commercial Association in Neoclassical style. It is located in the Infante D. Henrique Square in the historical centre of Porto, designated a World Heritage Site by UNESCO.</p>
-      <h3>6. Monument Church Of St Francis</h3>
+        <h3>6. Monument Church Of St Francis</h3>
         <p>The Church of Saint Francis is the most prominent Gothic monument in Porto, Portugal, being also noted for its outstanding Baroque inner decoration. It is located in the historic centre of the city, declared a World Heritage Site by UNESCO.</p>
-      <h3>7. Porto Cathedral</h3>
+        <h3>7. Porto Cathedral</h3>
         <p>The Porto Cathedral is a Roman Catholic church located in the historical centre of the city of Porto, Portugal. It is one of the city's oldest monuments and one of the most important local Romanesque monuments.</p>
-      <h3>8. Casa da Música</h3>
+        <h3>8. Casa da Música</h3>
         <p>The Casa da Música is a concert hall in Porto, Portugal. It was designed by architect Rem Koolhaas and opened in 2005. Designed to mark the festive year of 2001 in which the city of Porto was designated European Capital of Culture, it was the first building in Portugal aimed from its conception to be exclusively dedicated to music, either in public performances or in the field of artistic training and creation. Casa da Música's project was set in motion in 1999 as a result of an international architecture tender won by the project presented by Rem Koolhaas - Office for Metropolitan Architecture. Ground was broken in 1999 at the old tram terminus station in Boavista roundabout, and Casa da Musica was inaugurated on 15 April 2005.</p>
-      <h3>9. Jardins do Palácio de Cristal</h3>
+        <h3>9. Jardins do Palácio de Cristal</h3>
         <p>Landscaped gardens designed in the 19th century offering fountains, paths & Douro River views. Sitting atop a bluff, this gorgeous botanical garden is one of Porto's best-loved escapes, with lawns interwoven with sun-dappled paths and dotted with fountains, sculptures, giant magnolias, camellias, cypress and olive trees. It's actually a mosaic of small gardens that open up little by little as you wander – as do the stunning views of the city and Rio Douro.</p>
-      <h3>10.	Parque de Serralves</h3>
+        <h3>10.	Parque de Serralves</h3>
         <p>Serralves is a cultural institution located in Porto, Portugal, and one of the most important institutions worldwide, raking in the top 100 most visited museums in the world. It includes a Contemporary Art Museum, a Park and a Villa, each one an example of contemporary architecture, Modernism, and Art Deco architecture. The Museum, designed by Álvaro Siza Vieira, is now the second most visited museum in Portugal and one of the most relevant in the contemporary art circuit in Europe.</p>
-      <main class="church">
+      </section>
+      <section class="church">
         <div class="igreja">
           <img src="../images/igrejaDoCarmoSideView.jpg" alt="Igreja"/>
         </div>
-      </main>
-      <h3>11.	Igreja do Carmo</h3>
+        <h3>11.	Igreja do Carmo</h3>
         <p>Connected to its twin church by a house, this baroque church has a well-known tiled side facade. Dating to the late 18th century, this captivating azulejo-covered church is one of Porto’s best examples of rococo architecture. The tiled panel on the facade pays tribute to Nossa Senhora (Our Lady).</p>
-      <main class="rivera">
+      </section>
+      <section class="rivera">
         <div class="riverabuilding">
           <img src="../images/riveraSquareBuildings.jpg" alt="Rivera Buildings"/>
         </div>
         <div class="riveroverlook">
           <img src="../images/riveraSquareOverlook.jpg" alt="Rivera Overlook"/>
         </div>
-      </main>
-      <h3>12.	Ribeira Square</h3>
+        <h3>12.	Ribeira Square</h3>
         <p>Ribera square is the quintessential part of the city of Porto. The square does not look orderly, but it creates an industrial revolution atmosphere. There are lots of bars and restaurants on the square, as well as small shops run by locals, and the arts and crafts are beautiful.</p>
-      <h3>13.	Cais da Ribeira</h3>
+        <h3>13.	Cais da Ribeira</h3>
         <p>This riverfront promenade is postcard Porto, taking in the whole spectacular sweep of the city, from Ribeira's pastel houses stacked like Lego bricks to the barcos rabelos (flat-bottomed boats) once used to transport port from the Douro. Early-evening buskers serenade crowds, and chefs fire up grills in the hole-in-the-wall fish restaurants and tascas (taverns) in the old arcades.</p>
-      <h3>14.	Chapel Almas de Santa Catarina</h3>
+        <h3>14.	Chapel Almas de Santa Catarina</h3>
         <p>On Rua de Santa Catarina stands the strikingly ornate, azulejo-clad Capela das Almas. Magnificent blue-and-white panels here depict scenes from the lives of various saints, including the death of St Francis and the martyrdom of St Catherine. Interestingly, Eduardo Leite painted the tiles in a classic 18th-century style, though they actually date back to the early 20th century.</p>
-      <h3>15.	National Museum Soares dos Reis</h3>
+        <h3>15.	National Museum Soares dos Reis</h3>
         <p>Soares dos Reis National Museum is a museum, currently housed in the Carrancas Palace situated in the civil parish of Cedofeita, Santo Ildefonso, Sé, Miragaia, São Nicolau e Vitória, in the northern Portuguese city of Porto. Founded in 1833, it is the first Portuguese national museum exhibiting collections of Portuguese art, including a collection by Portuguese sculptor António Soares dos Reis, from which the museum derives its name.
         </p>
+      </section>
+    </main>
       <footer>
-        <main class="footer">
-          <div class="logo"></div>
-        </main>
-          <p>© 2020 Travel Blog. Created by Sandy Chuah.</p>
+        <div class="logo"></div>
+        <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
       </footer>
   </body>
 </html>
