--- a/website/about/index.html
+++ b/website/about/index.html
@@ -6,44 +6,44 @@
       <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
       <link rel="stylesheet" href="../css/main.css">
   </head>
-  <main class="Home">
-    <div class="HomeImage">
-      <div class="pageheader">
-        <h1><a href="../index.html">Porto, Portugal</a></h1>
+  <body>
+    <header>
+      <div class="HomeImage">
+        <div class="pageheader">
+          <h1><a href="../index.html">Porto, Portugal</a></h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="../about/index.html">About</a></li>
+            <li>|</li>
+            <li><a href="../sights/index.html">Sights</a></li>
+            <li>|</li>
+            <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
+          </ul>
+        <nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="../about/index.html">About</a></li>
-          <li>|</li>
-          <li><a href="../sights/index.html">Sights</a></li>
-          <li>|</li>
-          <li><a href="../24hours/index.html">24 Hours in Porto</a></li>
-        </ul>
-      <nav>
+    </header>
+    <main class="about">
+    <div class="boat">
+        <img src="../images/boatView.jpg" alt="Boat View">
+    </div>
+    <div class="text">
+      <h3>When to Visit:</h3>
+      <p>The best time to visit Porto is from May to September when the weather is often sunny and warm. Overall, Porto experiences a moderate climate. Summertime temps are high but bearable, and the breezes and nearby beaches will help you stay cool.</p>
+      <h3>At the airport:</h3>
+      <p>Francisco Sá Carneiro Airport (OPO), also known more simply as Porto International Airport, is situated 11km from the city centre. Modern and bustling, it’s equipped with restaurants, shops, ATMs and 24-hour information desks. Limited free WiFi is provided, and full WiFi is available for a fee.</p>
+      <h3>Getting into town:</h3>
+      <p>The local metro service takes roughly 30 minutes from the airport to Estádio do Dragão station, which connects with all major stations. Buy  a reusable transport card for €0.50 at the Andante shop in airport arrivals, then it’s €1.80 for a single trip into the city.</p>
+      <p>Regular buses run between the airport and the city, and cost €1.80 for a single journey. Look out for services 601, 602, 604 and 3M. A taxi usually costs €20-€30, but add 20% if travelling between 9pm and 6am, or at the weekend.</p>
+      <h3>Other ways to arrive:</h3>
+      <p>A fast train runs every hour between Lisbon and Porto. The journey takes around three hours and costs roughly €25. Reservations must be made in advance, either online or at the station.</p>
+      <h3>Porto orientation:</h3>
+      <p>The whole of Porto’s compact historic centre has been awarded UNESCO World Heritage status, so walking is certainly the best way to discover the city.</p>
     </div>
   </main>
-  <body>
-      <div class="boat">
-          <img src="../images/boatView.jpg" alt="Boat View">
-      </div>
-      <div class="text">
-      <h3>When to Visit:</h3>
-        <p>The best time to visit Porto is from May to September when the weather is often sunny and warm. Overall, Porto experiences a moderate climate. Summertime temps are high but bearable, and the breezes and nearby beaches will help you stay cool.</p>
-      <h3>At the airport:</h3>
-          <p>Francisco Sá Carneiro Airport (OPO), also known more simply as Porto International Airport, is situated 11km from the city centre. Modern and bustling, it’s equipped with restaurants, shops, ATMs and 24-hour information desks. Limited free WiFi is provided, and full WiFi is available for a fee.</p>
-      <h3>Getting into town:</h3>
-          <p>The local metro service takes roughly 30 minutes from the airport to Estádio do Dragão station, which connects with all major stations. Buy  a reusable transport card for €0.50 at the Andante shop in airport arrivals, then it’s €1.80 for a single trip into the city.
-          Regular buses run between the airport and the city, and cost €1.80 for a single journey. Look out for services 601, 602, 604 and 3M. A taxi usually costs €20-€30, but add 20% if travelling between 9pm and 6am, or at the weekend.</p>
-      <h3>Other ways to arrive:</h3>
-          <p>A fast train runs every hour between Lisbon and Porto. The journey takes around three hours and costs
-            roughly €25. Reservations must be made in advance, either online or at the station.</p>
-      <h3>Porto orientation:</h3>
-          <p>The whole of Porto’s compact historic centre has been awarded UNESCO World Heritage status, so walking is certainly the best way to discover the city.</p>
-      </div>
-  </body>
     <footer>
-        <div class="logo"></div>
-        <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
+      <div class="logo"></div>
+      <div class="footer">© 2020 Travel Blog. Created by Sandy Chuah.</div>
     </footer>
   </body>
 </html>
