--- a/website/sights/index.html
+++ b/website/sights/index.html
@@ -25,14 +25,14 @@
     </header>
     <main class="sights">
     <h1>Top 15 Things to Do in Porto</h1>
-    <section class="bridge">
+    <section>
       <div class="bridgelocks">
         <img src="../images/luisIBridgeLocks.jpg" alt="Bridge Locks"/>
       </div>
       <h3>1. Luís I Bridge</h3>
       <p>The Dom Luís I Bridge, or Luís I Bridge, is a double-deck metal arch bridge that spans the River Douro between the cities of Porto and Vila Nova de Gaia in Portugal. At its construction, its 172 metres span was the longest of its type in the world. It has been confused with the nearby Maria Pia Bridge, a railway bridge that was built 9 years earlier, which is similar in aspect to the Luís I bridge.</p>
     </section>
-    <section class="library">
+    <section>
       <div class="stairs">
         <img src="../images/libraryFront.jpg" alt="Library Stairs"></div>
       <div class="book">
@@ -43,14 +43,14 @@
       <h3>3. Clérigos Church</h3>
         <p>The Clérigos Church is a Baroque church in the city of Porto, in Portugal. Its tall bell tower, the Torre dos Clérigos, can be seen from various points of the city and is one of its most characteristic symbols.</p>
       </section>
-      <section class="railway">
+      <section>
         <div class="railstation">
           <img src="../images/outsideSaoBentoRainwayStation.jpg" alt="Railway Station"/>
         </div>
         <h3>4. São Bento Railway Station</h3>
         <p>São Bento Railway Station is a 20th-century railway terminal in the civil parish of Cedofeita, Santo Ildefonso, Sé, Miragaia, São Nicolau e Vitória, in the municipality of Porto, district of Porto. The English translation of São Bento is Saint Benedict. The station is located in the Historic Centre of Porto, which has been declared a UNESCO World Heritage Site and as a National Monument of Portugal. This building was constructed over a number of years, starting in 1904, based on plans by architect José Marques da Silva. The large panels of azulejo tile were designed and painted by Jorge Colaço; they were completed in 1916 and the station was then inaugurated. The murals represent moments in the country's history and the multicoloured panels depict rural scenes showing the people of various regions.</p>
       </section>
-      <section class="palace">
+      <section>
         <div class="bolsa">
           <img src="../images/bolsaPalace.jpg" alt="Bolsa Palace"/>
         </div>
@@ -67,14 +67,14 @@
         <h3>10.	Parque de Serralves</h3>
         <p>Serralves is a cultural institution located in Porto, Portugal, and one of the most important institutions worldwide, raking in the top 100 most visited museums in the world. It includes a Contemporary Art Museum, a Park and a Villa, each one an example of contemporary architecture, Modernism, and Art Deco architecture. The Museum, designed by Álvaro Siza Vieira, is now the second most visited museum in Portugal and one of the most relevant in the contemporary art circuit in Europe.</p>
       </section>
-      <section class="church">
+      <section>
         <div class="igreja">
           <img src="../images/igrejaDoCarmoSideView.jpg" alt="Igreja"/>
         </div>
         <h3>11.	Igreja do Carmo</h3>
         <p>Connected to its twin church by a house, this baroque church has a well-known tiled side facade. Dating to the late 18th century, this captivating azulejo-covered church is one of Porto’s best examples of rococo architecture. The tiled panel on the facade pays tribute to Nossa Senhora (Our Lady).</p>
       </section>
-      <section class="rivera">
+      <section>
         <div class="riverabuilding">
           <img src="../images/riveraSquareBuildings.jpg" alt="Rivera Buildings"/>
         </div>
