--- a/website/24hours/index.html
+++ b/website/24hours/index.html
@@ -26,7 +26,7 @@
     <main class="twentyfourhours">
     <h1> 24 HOURS IN PORTO</h1>
     <p>Twenty-four hours in Porto? No problem, through personal experience I traveled to Porto for less than two days to experience enough that I would be hungry to go back again.</p>
-    <section class="bridge">
+    <section>
       <div class="emptybridge">
         <img src="../images/luisIBridgeEmpty.jpg" alt="Empty Bridge"/>
       </div>
@@ -39,7 +39,7 @@
       <h3>Luís I Bridge</h3>
       <p>If you wake up early around 7-8 AM there are absolutely barely any folks wandering the streets. You can walk along the bridge without worrying about cars or other tourists blocking that perfect photo you want to capture.</p>
     </section>
-    <section class="train">
+    <section>
       <div class="trainwalls">
         <img src="../images/wallsRainwaytrain.jpg" alt="Train Tiles"/>
       </div>
@@ -52,7 +52,7 @@
       <h3>São Bento Railway Station  & Chapel Almas de Santa Catarina</h3>
       <p>I visited these spots early in the day as well and managed to get some nice shots of the beautiful tile work.</p>
     </section>
-    <section class="tarts">
+    <section>
       <div class"eggtarts">
         <img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/>
       </div>
@@ -62,7 +62,7 @@
       <h3>Manteigaria - Fábrica de Pastéis de Nata</h3>
       <p>If you visit Portugal you must try these famous egg tart pastries! They are a traditional snack here that are absolutely delicious. You have the option to dust some cinnamon sugar for that extra flavor. They are a cross between a custard tart and a cake. The outside is super flakey and the inside is filled with a creamy and sweet custard.</p>
     </section>
-    <section class="lellolibrary">
+    <section>
       <div class="libraryentrance">
         <img src="../images/livrariaLello.jpg" alt="Library Entrance"/>
       </div>
@@ -72,14 +72,14 @@
       <h3>Livraria Lello</h3>
       <p>If you love to read you must stop by this beautiful library. The line was long and the process to get tickets are not very simple in person. Make sure you purchase tickets from the bookshop located on the corner next to Livraria Lello first before waiting in line. The wait time was approximately half an hour to an hour.</p>
     </section>
-    <section class="igrejachurch">
+    <section>
       <div class="igrejatiles">
         <img src="../images/igrejaTiles.jpg" alt="Igreja Tiles"/>
       </div>
       <h3>Igreja do Carmo</h3>
       <p>This church was next to the library so we quickly stopped by to snap some photos.</p>
     </section>
-    <section class="clerigoschurch">
+    <section>
       <div class="frontchurch">
         <img src="../images/clerigosChurch.jpg" alt="Clerigo Church"/>
       </div>
@@ -89,14 +89,14 @@
       <h3>Clérigos Church</h3>
       <p>You can stop by here to capture a view of Porto. It gets very busy and the wait time can take up to an hour so be mindful of your time.</p>
     </section>
-    <section class="cafesantiago">
+    <section>
       <div class="sandwich">
         <img src="../images/francesinhaCloseup.jpg" alt="Sandwich"/>
       </div>
       <h3>Café Santiago - Famous Francesinha sandwich</h3>
       <p>We waited outside with empty stomachs waiting to try the famous Francesinha sandwich. It is made with bread, wet-cured ham, linguiça, fresh sausage like chipolata, steak or roast meat, and covered with melted cheese and a hot and thick spiced tomato and beer sauce. It is normally served with french fries. This restaurant is specifically known for this sandwich, it was absolutely worth the wait!</p>
     </section>
-    <section class="majestic">
+    <section>
       <div class="majesticcoffee">
         <img src="../images/majesticCafeCoffee.jpg" alt="Majestic Coffee"/>
       </div>
@@ -106,21 +106,21 @@
       <h3>Majestic Café</h3>
       <p>We sat and grabbed a cup of coffee and had a snack. This is a Belle Epoque-era cafe with ornate interior featuring carved wood, mirrors & chandeliers.</p>
     </section>
-    <section class="road">
+    <section>
       <div class="stoneroad">
         <img src="../images/roads.jpg" alt="Roads"/>
       </div>
       <h3>Ribeira Square</h3>
       <p>There are a lot of restaurants and shops to bring back local gifts for yourself, friends and family. It is located right next to the Douro River and the Luís I Bridge. There were plenty of tent vendors selling unique goods such as tiles, placemats, and many trinkets.</p>
     </section>
-    <section class="cable">
+    <section>
       <div class="stoneroad">
         <img src="../images/telefericoDeGaia.jpg" alt="Cable Car"/>
       </div>
       <h3>Teleferico de Gaia</h3>
       <p>After buying goodies you can walk across the Luís I Bridge to ride the cable car. It gives a great view of Porto and the Douro River.</p>
     </section>
-    <section class="paparico">
+    <section>
       <div class="dessertbox">
         <img src="../images/opaparicoDessertBox.jpg" alt="Dessert box"/>
       </div>
