--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <li><a href="design2/index.html">Second Design Layouts</a></li>
               <li><a href="design3/index.html">Third Design Layouts</a></li>
               <li><a href="mobileDesign/index.html">Mobile Design Layouts</a></li>
+              <li><a href="updatedMobileDesign/index.html">Second Mobile Design Layouts</a></li>
             </ul>
         </div>
       </main>
