--- a/website/sights/index.html
+++ b/website/sights/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <main class="sights">
-    <h1>Top 15 Things to Do in Porto</h1>
+    <h1>TOP 15 THINGS TO DO IN PORTO</h1>
     <section>
       <div class="bridgelocks">
         <img src="../images/luisIBridgeLocks.jpg" alt="Bridge Locks"/>
