--- a/website/about/index.html
+++ b/website/about/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <main class="about">
-    <h1>About</h1>
+    <h1>ABOUT</h1>
     <div class="boat">
         <img src="../images/boatView.jpg" alt="Boat View">
     </div>
