--- a/website/24hours/index.html
+++ b/website/24hours/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="HomeImage">
           <div class="pageheader">
-            <h1><a href="../index.html">Porto, Portugal</a></h1>
+            <a href="../index.html">Porto, Portugal</a>
           </div>
           <nav>
             <ul>
