--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     <main class="Home">
       <div class="HomeImage">
         <div class="pageheader">
-          <h1><a href="index.html">Porto, Portugal</a></h1>
+          <a href="index.html">Porto, Portugal</a>
         </div>
         <nav>
           <ul>
