--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sandy Chuah</title>
         <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
         <link rel="stylesheet" href="css/main.css">
@@ -25,6 +26,7 @@
               <li><a href="E11/index.html">Exercise 11: Type on Screen II</a></li>
               <li><a href="E12/index.html">Exercise 12: CSS Drawing</a></li>
               <li><a href="E13/index.html">Exercise 13: Programmer and Computer</a></li>
+              <li><a href="E15/index.html">Exercise 15: Extra Credit</a></li>
               <li><a href="E9/test/index.html">Class Exercise</a></li>
             </ul>
         </div>
