--- a/website/sights/index.html
+++ b/website/sights/index.html
@@ -33,10 +33,13 @@
       <p>The Dom Luís I Bridge, or Luís I Bridge, is a double-deck metal arch bridge that spans the River Douro between the cities of Porto and Vila Nova de Gaia in Portugal. At its construction, its 172 metres span was the longest of its type in the world. It has been confused with the nearby Maria Pia Bridge, a railway bridge that was built 9 years earlier, which is similar in aspect to the Luís I bridge.</p>
     </section>
     <section>
-      <div class="stairs">
-        <img src="../images/libraryFront.jpg" alt="Library Stairs"></div>
-      <div class="book">
-        <img src="../images/libraryBook.jpg" alt="Library Book"/>
+      <div class="clear">
+        <div class="stairs">
+          <img src="../images/libraryFront.jpg" alt="Library Stairs">
+        </div>
+        <div class="stairs">
+          <img src="../images/libraryBack.jpg" alt="Library Back Stairs"/>
+        </div>
       </div>
       <h3>2. Livraria Lello</h3>
         <p>The Lello Bookstore, also known as Livraria Lello & Irmão and Livraria Chardron, is a bookstore located in civil parish of Cedofeita, Santo Ildefonso, Sé, Miragaia, São Nicolau e Vitória, in the northern Portuguese municipality of Porto. Along with Bertrand in Lisbon, it is one of the oldest bookstores in Portugal and frequently rated among the top bookstores in the world. Rumors say it was a direct inspiration for J.K. Rowling and her Harry Potter books. Rowling lived in the city from 1991 to 1993 and was a frequent customer.</p3>
@@ -75,11 +78,13 @@
         <p>Connected to its twin church by a house, this baroque church has a well-known tiled side facade. Dating to the late 18th century, this captivating azulejo-covered church is one of Porto’s best examples of rococo architecture. The tiled panel on the facade pays tribute to Nossa Senhora (Our Lady).</p>
       </section>
       <section>
-        <div class="riverabuilding">
-          <img src="../images/riveraSquareBuildings.jpg" alt="Rivera Buildings"/>
-        </div>
-        <div class="riveroverlook">
-          <img src="../images/riveraSquareOverlook.jpg" alt="Rivera Overlook"/>
+        <div class="clear">
+          <div class="rivera">
+            <img src="../images/riveraSquareBuildings.jpg" alt="Rivera Buildings"/>
+          </div>
+          <div class="rivera">
+            <img src="../images/riveraSquareOverlook.jpg" alt="Rivera Overlook"/>
+          </div>
         </div>
         <h3>12.	Ribeira Square</h3>
         <p>Ribera square is the quintessential part of the city of Porto. The square does not look orderly, but it creates an industrial revolution atmosphere. There are lots of bars and restaurants on the square, as well as small shops run by locals, and the arts and crafts are beautiful.</p>
