--- a/website/24hours/index.html
+++ b/website/24hours/index.html
@@ -27,14 +27,16 @@
     <h1> 24 HOURS IN PORTO</h1>
     <p>Twenty-four hours in Porto? No problem, through personal experience I traveled to Porto for less than two days to experience enough that I would be hungry to go back again.</p>
     <section>
-      <div class="emptybridge">
-        <img src="../images/luisIBridgeEmpty.jpg" alt="Empty Bridge"/>
-      </div>
-      <div class="closebridge">
-        <img src="../images/luisBridgeRiver.jpg" alt="Close Up Bridge"/>
-      </div>
-      <div class="engrave">
-        <img src="../images/luisBridge.jpg" alt="Bridge Engraving"/>
+      <div class="clear">
+        <div class="emptybridge">
+          <img src="../images/luisIBridgeEmpty.jpg" alt="Empty Bridge"/>
+        </div>
+        <div class="closebridge">
+          <img src="../images/luisBridgeRiver.jpg" alt="Close Up Bridge"/>
+        </div>
+        <div class="engrave">
+          <img src="../images/luisBridge.jpg" alt="Bridge Engraving"/>
+        </div>
       </div>
       <h3>Luís I Bridge</h3>
       <p>If you wake up early around 7-8 AM there are absolutely barely any folks wandering the streets. You can walk along the bridge without worrying about cars or other tourists blocking that perfect photo you want to capture.</p>
@@ -53,21 +55,25 @@
       <p>I visited these spots early in the day as well and managed to get some nice shots of the beautiful tile work.</p>
     </section>
     <section>
-      <div class"eggtarts">
-        <img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/>
-      </div>
-      <div class="coffee">
-        <img src="../images/pasteisDeNataCoffee.jpg" alt="Coffee"/>
+      <div class="clear">
+        <div class"eggs">
+          <img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/>
+        </div>
+        <div class="eggs">
+          <img src="../images/pasteisDeNataCoffee.jpg" alt="Coffee"/>
+        </div>
       </div>
       <h3>Manteigaria - Fábrica de Pastéis de Nata</h3>
       <p>If you visit Portugal you must try these famous egg tart pastries! They are a traditional snack here that are absolutely delicious. You have the option to dust some cinnamon sugar for that extra flavor. They are a cross between a custard tart and a cake. The outside is super flakey and the inside is filled with a creamy and sweet custard.</p>
     </section>
     <section>
-      <div class="libraryentrance">
-        <img src="../images/livrariaLello.jpg" alt="Library Entrance"/>
-      </div>
-      <div class="librarystairs">
-        <img src="../images/libraryStairs.jpg" alt="Library Stairs"/>
+      <div class="clear">
+        <div class="library">
+          <img src="../images/livrariaLello.jpg" alt="Library Entrance"/>
+        </div>
+        <div class="library">
+          <img src="../images/libraryStairs.jpg" alt="Library Stairs"/>
+        </div>
       </div>
       <h3>Livraria Lello</h3>
       <p>If you love to read you must stop by this beautiful library. The line was long and the process to get tickets are not very simple in person. Make sure you purchase tickets from the bookshop located on the corner next to Livraria Lello first before waiting in line. The wait time was approximately half an hour to an hour.</p>
@@ -80,11 +86,13 @@
       <p>This church was next to the library so we quickly stopped by to snap some photos.</p>
     </section>
     <section>
-      <div class="frontchurch">
-        <img src="../images/clerigosChurch.jpg" alt="Clerigo Church"/>
-      </div>
-      <div class="churchtower">
-        <img src="../images/clerigosChurchTower.jpg" alt="Church Tower"/>
+      <div class="clear">
+        <div class="church">
+          <img src="../images/clerigosChurch.jpg" alt="Clerigo Church"/>
+        </div>
+        <div class="church">
+          <img src="../images/clerigosChurchTower.jpg" alt="Church Tower"/>
+        </div>
       </div>
       <h3>Clérigos Church</h3>
       <p>You can stop by here to capture a view of Porto. It gets very busy and the wait time can take up to an hour so be mindful of your time.</p>
@@ -97,11 +105,13 @@
       <p>We waited outside with empty stomachs waiting to try the famous Francesinha sandwich. It is made with bread, wet-cured ham, linguiça, fresh sausage like chipolata, steak or roast meat, and covered with melted cheese and a hot and thick spiced tomato and beer sauce. It is normally served with french fries. This restaurant is specifically known for this sandwich, it was absolutely worth the wait!</p>
     </section>
     <section>
-      <div class="majesticcoffee">
-        <img src="../images/majesticCafeCoffee.jpg" alt="Majestic Coffee"/>
-      </div>
-      <div class="almondtart">
-        <img src="../images/majesticCafealmondTart.jpg" alt="Almondtart"/>
+      <div class="clear">
+        <div class="cafe">
+          <img src="../images/majesticCafeCoffee.jpg" alt="Majestic Coffee"/>
+        </div>
+        <div class="cafe">
+          <img src="../images/majesticCafealmondTart.jpg" alt="Almondtart"/>
+        </div>
       </div>
       <h3>Majestic Café</h3>
       <p>We sat and grabbed a cup of coffee and had a snack. This is a Belle Epoque-era cafe with ornate interior featuring carved wood, mirrors & chandeliers.</p>
