--- a/website/24hours/index.html
+++ b/website/24hours/index.html
@@ -56,7 +56,7 @@
     </section>
     <section>
       <div class="clear">
-        <div class"eggs">
+        <div class="eggs">
           <img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/>
         </div>
         <div class="eggs">
