--- a/website/24hours/index.html
+++ b/website/24hours/index.html
@@ -56,10 +56,10 @@
     </section>
     <section>
       <div class="clear">
-        <div class="eggs">
+        <div class="eggs1">
           <img src="../images/pasteisDeNata.jpg" alt="Egg Tarts"/>
         </div>
-        <div class="eggs">
+        <div class="eggs2">
           <img src="../images/pasteisDeNataCoffee.jpg" alt="Coffee"/>
         </div>
       </div>
@@ -68,10 +68,10 @@
     </section>
     <section>
       <div class="clear">
-        <div class="library">
+        <div class="library1">
           <img src="../images/livrariaLello.jpg" alt="Library Entrance"/>
         </div>
-        <div class="library">
+        <div class="library2">
           <img src="../images/libraryStairs.jpg" alt="Library Stairs"/>
         </div>
       </div>
@@ -87,10 +87,10 @@
     </section>
     <section>
       <div class="clear">
-        <div class="church">
+        <div class="church1">
           <img src="../images/clerigosChurch.jpg" alt="Clerigo Church"/>
         </div>
-        <div class="church">
+        <div class="church2">
           <img src="../images/clerigosChurchTower.jpg" alt="Church Tower"/>
         </div>
       </div>
@@ -106,10 +106,10 @@
     </section>
     <section>
       <div class="clear">
-        <div class="cafe">
+        <div class="cafe1">
           <img src="../images/majesticCafeCoffee.jpg" alt="Majestic Coffee"/>
         </div>
-        <div class="cafe">
+        <div class="cafe2">
           <img src="../images/majesticCafealmondTart.jpg" alt="Almondtart"/>
         </div>
       </div>
@@ -131,14 +131,16 @@
       <p>After buying goodies you can walk across the Luís I Bridge to ride the cable car. It gives a great view of Porto and the Douro River.</p>
     </section>
     <section>
-      <div class="dessertbox">
-        <img src="../images/opaparicoDessertBox.jpg" alt="Dessert box"/>
-      </div>
-      <div class="menu">
-        <img src="../images/opaparicoMenu.jpg" alt="Menu"/>
-      </div>
-      <div class="apps">
-        <img src="../images/opaparicoApps.jpg" alt="Appetizers"/>
+      <div class="clear">
+        <div class="dessertbox">
+          <img src="../images/opaparicoDessertBox.jpg" alt="Dessert box"/>
+        </div>
+        <div class="menu">
+          <img src="../images/opaparicoMenu.jpg" alt="Menu"/>
+        </div>
+        <div class="apps">
+          <img src="../images/opaparicoApps.jpg" alt="Appetizers"/>
+        </div>
       </div>
       <h3>O Paparico</h3>
       <p>If you like good food and fine dining this place is perfect. The setting is rustic with centuries-old rock walls, wooden tables, and elegant chandeliers. This place was cozy and has some of the best foods I have tried during my Portugal visit.</p>
