--- a/website/sights/index.html
+++ b/website/sights/index.html
@@ -34,10 +34,10 @@
     </section>
     <section>
       <div class="clear">
-        <div class="stairs">
+        <div class="stairs1">
           <img src="../images/libraryFront.jpg" alt="Library Stairs">
         </div>
-        <div class="stairs">
+        <div class="stairs2">
           <img src="../images/libraryBack.jpg" alt="Library Back Stairs"/>
         </div>
       </div>
@@ -79,10 +79,10 @@
       </section>
       <section>
         <div class="clear">
-          <div class="rivera">
+          <div class="rivera1">
             <img src="../images/riveraSquareBuildings.jpg" alt="Rivera Buildings"/>
           </div>
-          <div class="rivera">
+          <div class="rivera2">
             <img src="../images/riveraSquareOverlook.jpg" alt="Rivera Overlook"/>
           </div>
         </div>
