Alignment and Final Mobile Design

--- a/design2/index.html
+++ b/design2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Second Set of Designs</h1>
+    <h1><a href="../index.html">Second Set of Designs</a></h1>
     <p><img src="images/2ndHome.png" alt="Home Page"/></p>
     <p><img src="images/2ndAbout.png" alt="About Page"/></p>
     <p><img src="images/2ndSights.png" alt="Sights Page"/></p>
