--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
             <ul>
               <li><a href="website/index.html">Website</a></li>
             </ul>
-          <h2>Porto, Portugal Web Pages:</h2>
+          <h2>Web Pages:</h2>
             <ul>
               <li><a href="design1/index.html">First Design Layouts</a></li>
               <li><a href="design2/index.html">Second Design Layouts</a></li>
               <li><a href="design3/index.html">Third Design Layouts</a></li>
               <li><a href="design4/index.html">Final Design Layouts</a></li>
+            </ul>
+          <h2>Mobile Web Pages:</h2>
+            <ul>
               <li><a href="mobileDesign/index.html">Mobile Design Layouts</a></li>
-              <li><a href="updatedMobileDesign/index.html">Second Mobile Design Layouts</a></li>
+              <li><a href="mobileDesign2/index.html">Second Mobile Design Layouts</a></li>
+              <li><a href="mobileDesign3/index.html">Final Mobile Design Layouts</a></li>
             </ul>
         </div>
       </main>
