--- a/design1/index.html
+++ b/design1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>First Set of Designs</h1>
+    <h1><a href="../index.html">First Set of Designs</a></h1>
     <p><img src="images/home.png" alt="Home Page"/></p>
     <p><img src="images/about.png" alt="About Page"/></p>
     <p><img src="images/sights.png" alt="Sights Page"/></p>
