--- a/design3/index.html
+++ b/design3/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Third Set of Designs</h1>
+    <h1><a href="../index.html">Third Set of Designs</a></h1>
     <p><img src="images/updateHome.png" alt="Home Page"/></p>
     <p><img src="images/updateAbout.png" alt="About Page"/></p>
     <p><img src="images/updateSights.png" alt="Sights Page"/></p>
