--- a/design4/index.html
+++ b/design4/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Final Design</title>
-    <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <h1>Final Set of Designs</h1>
-    <p><img src="images/updateHome.png" alt="Home Page"/></p>
-    <p><img src="images/updateAbout.png" alt="About Page"/></p>
-    <p><img src="images/updateSights.png" alt="Sights Page"/></p>
-    <p><img src="images/update24hours.png" alt="24 Hours Page"/></p>
-    </body>
-</html>
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <title>Final Design</title>
+      <link rel="stylesheet" href="https://use.typekit.net/ofy6ohe.css">
+      <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+      <h1><a href="../index.html">Final Set of Designs</a></h1>
+      <p><img src="images/updateHome.png" alt="Home Page"/></p>
+      <p><img src="images/updateAbout.png" alt="About Page"/></p>
+      <p><img src="images/updateSights.png" alt="Sights Page"/></p>
+      <p><img src="images/update24hours.png" alt="24 Hours Page"/></p>
+      </body>
+  </html>
